# citadel-tools

./: Cargo.toml
citadel-installer-ui/: Cargo.toml  README.md
citadel-installer-ui/data/: citadel_password_page.ui  confirm_install_page.ui  install_destination_page.ui  install_page.ui  luks_password_page.ui  style.css  welcome_page.ui
citadel-installer-ui/src/: builder.rs  dbus_client.rs  error.rs  main.rs  rowdata.rs  ui.rs
citadel-realms/: Cargo.toml
citadel-realms-ui/: Cargo.toml  citadel-realms-ui_0.1.0.bb
citadel-realms-ui/data/: config-dialog.ui  config-option.ui  config.ui  main.ui  result.ui  style.css
citadel-realms-ui/src/: builder.rs  config.rs  error.rs  instance.rs  main.rs  matcher.rs  realms.rs  results.rs  ui.rs
citadel-realms/src/: dialogs.rs  help.rs  item_list.rs  logview.rs  notes.rs  terminal.rs  theme.rs  ui.rs
citadel-realms/src/realm/: actions.rs  config_realm.rs  delete_realm.rs  mod.rs  (+1 more)
citadel-tool/: Cargo.toml
citadel-tool/src/: main.rs
citadel-tool/src/boot/: disks.rs  live.rs  mod.rs  rootfs.rs
citadel-tool/src/image/: mod.rs
citadel-tool/src/install/: cli.rs  disk.rs  installer.rs  mod.rs
citadel-tool/src/install_backend/: dbus.rs  disk.rs  mod.rs
citadel-tool/src/mkimage/: build.rs  config.rs
citadel-tool/src/realmfs/: mod.rs
citadel-tool/src/sync/: desktop_file.rs  desktop_sync.rs  icon_cache.rs  icons.rs  parser.rs
citadel-tool/src/update/: kernel.rs  mod.rs
data/: citadel-realmsd.service  com.subgraph.installer.Manager.conf
libcitadel/: Cargo.toml
libcitadel/src/: blockdev.rs  cmdline.rs  config.rs  error.rs  exec.rs  header.rs  keyring.rs  keys.rs  lib.rs  log.rs  partition.rs  resource.rs  symlink.rs  util.rs  verity.rs
libcitadel/src/realm/: config.rs  create.rs  events.rs  launcher.rs  manager.rs  network.rs  overlay.rs  realm.rs  realms.rs  systemd.rs
libcitadel/src/realmfs/: mod.rs  mountpoint.rs  realmfs.rs  realmfs_set.rs  resizer.rs  update.rs
libcitadel/src/system/: lock.rs  loopdev.rs  mounts.rs  uname.rs
libcitadel/src/terminal/: ansi.rs  base16.rs  base16_shell.rs  color.rs  gnome.rs  mod.rs  raw.rs  restorer.rs
realmsd/: Cargo.toml
realmsd/src/: dbus.rs  main.rs
systemd/: citadel-boot-automount.service
(+4 files in other folders)
