[package]
name = "citadel-realms-ui"
version = "0.1.0"
authors = ["Bruce Leidl <bruce@subgraph.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus = "0.8"
nix = "0.17.0"
fuzzy-matcher = "*"
gtk = "^0"
gdk = "^0"
gio = "^0"
glib = "^0"
pango = "^0"
