[package]
name = "citadel-realms-ui"
description = "Citadel Realms UI"
version = "0.1.0"
authors = ["Bruce Leidl <bruce@subgraph.com>"]
edition = "2018"
homepage = "https://subgraph,com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus = "0.8"
nix = "0.17.0"
fuzzy-matcher = "0.3.7"
gtk = "0.9.0"
gdk = "0.13.2"
gio = "0.9.1"
glib = "0.10.2"
pango = "0.9.1"
