[package]
name = "libcitadel"
version = "0.1.0"
authors = ["Bruce Leidl <bruce@subgraph.com>"]
edition = "2018"

[dependencies]
libc = "0.2"
nix = "0.17.0"
failure = "0.1.3"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
lazy_static = "1.4"
sodiumoxide = "0.2"
hex = "0.4"
byteorder = "1"
bincode = "1.2"
walkdir = "2"
dbus = "0.6"

[dependencies.inotify]
version = "0.8"
default-features = false
features = []
